fix: hide wp notices to keep the layout from shifting

--- a/modules/settings/assets/css/style.css
+++ b/modules/settings/assets/css/style.css
@@ -2,6 +2,11 @@
 	padding-bottom: 0;
 }
 
+/* Hide wp notices */
+.notice, .update-nag {
+	display: none;
+}
+
 body {
 	background: #fff;
 }
